Work on email generation from snapshot.

--- a/resources/index.html
+++ b/resources/index.html
@@ -258,7 +258,13 @@
                           </tbody>
                         </table> <!-- 2px spacer -->
 
-                        <p class="content">This feels like a big milestone and a special moment to reflect on.</p>
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th class="small-12 large-12 columns first last topic">                    
+
+                        <p>This feels like a big milestone and a special moment to reflect on.</p>
 
                         <table class="row">
                           <tbody>
@@ -281,6 +287,12 @@
                             </tr>
                           </tbody>
                         </table> <!-- 20px spacer -->
+
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th class="small-12 large-12 columns first last topic">                    
 
                         <a class="topic-read-more" href="http://cnn.com/">READ MORE</a>
 
@@ -418,7 +430,13 @@
                           </tbody>
                         </table> <!-- 2px spacer -->
 
-                        <p class="content">We launched Pablo 2.0! More than 500,000 Pablo images have been
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th class="small-12 large-12 columns first last topic">                    
+
+                        <p>We launched Pablo 2.0! More than 500,000 Pablo images have been
                         created so far, and we're excited to keep going with our quick images tool.</p>
 
                         <table class="row">
@@ -442,6 +460,12 @@
                             </tr>
                           </tbody>
                         </table> <!-- 20px spacer -->
+
+                      </th>
+                    </tr>
+
+                    <tr>
+                      <th class="small-12 large-12 columns first last topic">                    
 
                         <a class="topic-read-more" href="http://cnn.com/">READ MORE</a>
 
