--- a/resources/index.inline.html
+++ b/resources/index.inline.html
@@ -371,7 +371,7 @@
                 <table class="row header" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; background: #f9f9f9; padding: 0; width: 100%; position: relative; display: table;" width="100%" valign="top" align="left">
                   <tbody>
                     <tr style="padding: 0; vertical-align: top; text-align: left;" valign="top" align="left">
-                      <th class="small-12 large-12 first last columns content" style="font-weight: normal; padding: 0; text-align: left; line-height: 19px; margin: 0 auto; width: 564px; Margin: 0 auto; padding-left: 16px; padding-right: 16px; padding-bottom: 0px; font-size: 12px; font-family: Domine-Regular; color: #4e5a6b;" align="left">
+                      <th class="small-12 large-12 first last columns content" style="font-weight: normal; padding: 0; text-align: left; margin: 0 auto; width: 564px; Margin: 0 auto; padding-left: 16px; padding-right: 16px; line-height: 1.3; font-size: 12px; font-family: Domine-Regular; color: #4e5a6b; padding-bottom: 0px;" align="left">
                         Hi all, here’s the latest info. Recruiting efforts paid off! Retention is down though, we’ll fix it. Let me know if you want to discuss before we meet next week.
                       </th>
                     </tr>
@@ -404,7 +404,7 @@
                   <tbody>
                     <tr style="padding: 0; vertical-align: top; text-align: left;" valign="top" align="left">
                       <th class="small-12 large-12 first last columns" style="color: #0a0a0a; font-size: 16px; line-height: 19px; text-align: left; padding: 0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; Margin: 0 auto; width: 564px; margin: 0 auto; padding-right: 16px; padding-left: 16px; padding-bottom: 0px;" align="left">
-                        <p class="text-center content" style="font-weight: normal; margin: 0; margin-bottom: 10px; line-height: 19px; padding: 0; Margin: 0; Margin-bottom: 10px; text-align: center; font-family: Domine-Regular; color: #4e5a6b; font-size: 12px;">— Joel / February 3, 2016
+                        <p class="text-center content" style="font-weight: normal; margin: 0; margin-bottom: 10px; padding: 0; Margin: 0; Margin-bottom: 10px; text-align: center; font-family: Domine-Regular; color: #4e5a6b; line-height: 1.3; font-size: 12px;">— Joel / February 3, 2016
                       </p></th>
                     </tr>
                   </tbody>
@@ -459,7 +459,7 @@
                           </tbody>
                         </table> <!-- 24px spacer -->
                 
-                        <p class="topic-title" style="text-align: left; margin: 0; Margin-bottom: 10px; Margin: 0; padding: 0; font-weight: bold; font-family: OpenSans, Helvetica, sans-serif; line-height: 1.5; font-size: 12px; margin-bottom: 10px; color: #4e5a6b; letter-spacing: 1px; opacity: 0.5;">TEAM</p>
+                        <p class="topic-title" style="text-align: left; margin: 0; Margin-bottom: 10px; Margin: 0; padding: 0; font-weight: bold; font-family: OpenSans, Arial, sans-serif; line-height: 1.5; font-size: 12px; margin-bottom: 10px; color: #4e5a6b; letter-spacing: 1px; opacity: 0.5;">TEAM</p>
 
                         <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0; position: relative; width: 100%; display: table;" width="100%" valign="top" align="left">
                           <tbody>
@@ -509,7 +509,13 @@
                           </tbody>
                         </table> <!-- 2px spacer -->
 
-                        <p class="content" style="padding: 0; margin: 0; margin-bottom: 10px; line-height: 19px; font-weight: normal; Margin: 0; text-align: left; Margin-bottom: 10px; font-family: Domine-Regular; font-size: 12px; color: #4e5a6b;">This feels like a big milestone and a special moment to reflect on.</p>
+                      </th>
+                    </tr>
+
+                    <tr style="padding: 0; vertical-align: top; text-align: left;" valign="top" align="left">
+                      <th class="small-12 large-12 columns first last topic" style="color: #0a0a0a; font-size: 16px; line-height: 19px; text-align: left; padding: 0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; Margin: 0 auto; width: 564px; margin: 0 auto; padding-right: 16px; padding-left: 16px; padding-bottom: 0px;" align="left">                    
+
+                        <p style="padding: 0; margin: 0; margin-bottom: 10px; text-align: left; font-weight: normal; Margin: 0; Margin-bottom: 10px; font-family: Domine-Regular; line-height: 1.3; font-size: 12px; color: #4e5a6b;">This feels like a big milestone and a special moment to reflect on.</p>
 
                         <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0; position: relative; width: 100%; display: table;" width="100%" valign="top" align="left">
                           <tbody>
@@ -533,7 +539,13 @@
                           </tbody>
                         </table> <!-- 20px spacer -->
 
-                        <a class="topic-read-more" href="http://cnn.com/" style="text-align: left; padding: 0; margin: 0; Margin: 0; font-weight: bold; color: #4e5a6b; font-family: OpenSans, Helvetica, sans-serif; line-height: 1.5; text-decoration: underline; font-size: 12px; letter-spacing: 1px; opacity: 0.5; margin-bottom: 10px;">READ MORE</a>
+                      </th>
+                    </tr>
+
+                    <tr style="padding: 0; vertical-align: top; text-align: left;" valign="top" align="left">
+                      <th class="small-12 large-12 columns first last topic" style="color: #0a0a0a; font-size: 16px; line-height: 19px; text-align: left; padding: 0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; Margin: 0 auto; width: 564px; margin: 0 auto; padding-right: 16px; padding-left: 16px; padding-bottom: 0px;" align="left">                    
+
+                        <a class="topic-read-more" href="http://cnn.com/" style="text-align: left; padding: 0; margin: 0; Margin: 0; font-weight: bold; color: #4e5a6b; font-family: OpenSans, Arial, sans-serif; line-height: 1.5; text-decoration: underline; font-size: 12px; letter-spacing: 1px; opacity: 0.5; margin-bottom: 10px;">READ MORE</a>
 
                         <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0; position: relative; width: 100%; display: table;" width="100%" valign="top" align="left">
                           <tbody>
@@ -619,7 +631,7 @@
                           </tbody>
                         </table> <!-- 24px spacer -->
                 
-                        <p class="topic-title" style="text-align: left; margin: 0; Margin-bottom: 10px; Margin: 0; padding: 0; font-weight: bold; font-family: OpenSans, Helvetica, sans-serif; line-height: 1.5; font-size: 12px; margin-bottom: 10px; color: #4e5a6b; letter-spacing: 1px; opacity: 0.5;">PRODUCT</p>
+                        <p class="topic-title" style="text-align: left; margin: 0; Margin-bottom: 10px; Margin: 0; padding: 0; font-weight: bold; font-family: OpenSans, Arial, sans-serif; line-height: 1.5; font-size: 12px; margin-bottom: 10px; color: #4e5a6b; letter-spacing: 1px; opacity: 0.5;">PRODUCT</p>
 
                         <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0; position: relative; width: 100%; display: table;" width="100%" valign="top" align="left">
                           <tbody>
@@ -669,7 +681,13 @@
                           </tbody>
                         </table> <!-- 2px spacer -->
 
-                        <p class="content" style="padding: 0; margin: 0; margin-bottom: 10px; line-height: 19px; font-weight: normal; Margin: 0; text-align: left; Margin-bottom: 10px; font-family: Domine-Regular; font-size: 12px; color: #4e5a6b;">We launched Pablo 2.0! More than 500,000 Pablo images have been
+                      </th>
+                    </tr>
+
+                    <tr style="padding: 0; vertical-align: top; text-align: left;" valign="top" align="left">
+                      <th class="small-12 large-12 columns first last topic" style="color: #0a0a0a; font-size: 16px; line-height: 19px; text-align: left; padding: 0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; Margin: 0 auto; width: 564px; margin: 0 auto; padding-right: 16px; padding-left: 16px; padding-bottom: 0px;" align="left">                    
+
+                        <p style="padding: 0; margin: 0; margin-bottom: 10px; text-align: left; font-weight: normal; Margin: 0; Margin-bottom: 10px; font-family: Domine-Regular; line-height: 1.3; font-size: 12px; color: #4e5a6b;">We launched Pablo 2.0! More than 500,000 Pablo images have been
                         created so far, and we're excited to keep going with our quick images tool.</p>
 
                         <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0; position: relative; width: 100%; display: table;" width="100%" valign="top" align="left">
@@ -694,7 +712,13 @@
                           </tbody>
                         </table> <!-- 20px spacer -->
 
-                        <a class="topic-read-more" href="http://cnn.com/" style="text-align: left; padding: 0; margin: 0; Margin: 0; font-weight: bold; color: #4e5a6b; font-family: OpenSans, Helvetica, sans-serif; line-height: 1.5; text-decoration: underline; font-size: 12px; letter-spacing: 1px; opacity: 0.5; margin-bottom: 10px;">READ MORE</a>
+                      </th>
+                    </tr>
+
+                    <tr style="padding: 0; vertical-align: top; text-align: left;" valign="top" align="left">
+                      <th class="small-12 large-12 columns first last topic" style="color: #0a0a0a; font-size: 16px; line-height: 19px; text-align: left; padding: 0; font-weight: normal; font-family: Helvetica, Arial, sans-serif; Margin: 0 auto; width: 564px; margin: 0 auto; padding-right: 16px; padding-left: 16px; padding-bottom: 0px;" align="left">                    
+
+                        <a class="topic-read-more" href="http://cnn.com/" style="text-align: left; padding: 0; margin: 0; Margin: 0; font-weight: bold; color: #4e5a6b; font-family: OpenSans, Arial, sans-serif; line-height: 1.5; text-decoration: underline; font-size: 12px; letter-spacing: 1px; opacity: 0.5; margin-bottom: 10px;">READ MORE</a>
 
                         <table class="row" style="border-spacing: 0; border-collapse: collapse; vertical-align: top; text-align: left; padding: 0; position: relative; width: 100%; display: table;" width="100%" valign="top" align="left">
                           <tbody>
