Update email style to put note alone at top in left justified white. Remove date from attribution.

--- a/resources/index.html
+++ b/resources/index.html
@@ -23,6 +23,92 @@
         <center>
           <!-- The content of your email goes here. -->
 
+          <table class="row note">
+            <tbody>
+              <tr>
+                <th class="small-12 large-12 first last columns">
+                  <table>
+                    <tr>
+                      <th>
+                        <table class="spacer">
+                          <tbody>
+                            <tr>
+                              <td height="55px" style="font-size:55px;line-height:55px;">&#xA0;</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      <th class="expander"></th>
+                    </tr>
+                  </table>
+                </th>
+              </tr>
+            </tbody>
+          </table> <!-- 55px spacer -->
+
+          <table class="row note">
+            <tbody>
+              <tr>
+                <th class="small-12 large-12 first last columns content">
+                  Hi all, here’s the latest info. Recruiting efforts paid off! Retention is down though, we’ll fix it. Let me know if you want to discuss before we meet next week.
+                </th>
+              </tr>
+            </tbody>
+          </table> <!-- Note -->
+
+          <table class="row note">
+            <tbody>
+              <tr>
+                <th class="small-12 large-12 columns first last">
+                  <table>
+                    <tr>
+                      <th>
+                        <table class="spacer">
+                          <tbody>
+                            <tr>
+                              <td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      <th class="expander"></th>
+                    </tr>
+                  </table>
+                </th>
+              </tr>
+            </tbody>
+          </table> <!-- 16px spacer -->
+
+          <table class="row note">
+            <tbody>
+              <tr>
+                <th class="small-12 large-12 first last columns">
+                  <p class="content">— Joel Gascoigne</h4>
+                </th>
+              </tr>
+            </tbody>
+          </table> <!-- Attribution -->
+
+          <table class="row note">
+            <tbody>
+              <tr>
+                <th class="small-12 large-12 columns first last">
+                  <table>
+                    <tr>
+                      <th>
+                        <table class="spacer">
+                          <tbody>
+                            <tr>
+                              <td height="57px" style="font-size:57px;line-height:57px;">&#xA0;</td>
+                            </tr>
+                          </tbody>
+                        </table>
+                      <th class="expander"></th>
+                    </tr>
+                  </table>
+                </th>
+              </tr>
+            </tbody>
+          </table> <!-- 57px spacer -->
+
           <table class="container">
             <tr>
               <td>
@@ -37,7 +123,7 @@
                               <table class="spacer">
                                 <tbody>
                                   <tr>
-                                    <td height="52px" style="font-size:52px;line-height:52px;">&#xA0;</td>
+                                    <td height="60px" style="font-size:60px;line-height:60px;">&#xA0;</td>
                                   </tr>
                                 </tbody>
                               </table>
@@ -47,7 +133,7 @@
                       </th>
                     </tr>
                   </tbody>
-                </table> <!-- 52px spacer -->
+                </table> <!-- 60px spacer -->
 
                 <table class="row header">
                   <tbody>
@@ -73,7 +159,7 @@
                               <table class="spacer">
                                 <tbody>
                                   <tr>
-                                    <td height="37px" style="font-size:37px;line-height:37px;">&#xA0;</td>
+                                    <td height="17px" style="font-size:17px;line-height:17px;">&#xA0;</td>
                                   </tr>
                                 </tbody>
                               </table>
@@ -83,7 +169,7 @@
                       </th>
                     </tr>
                   </tbody>
-                </table> <!-- 37px spacer -->
+                </table> <!-- 17px spacer -->
 
                 <table class="row header">
                   <tbody>
@@ -105,7 +191,7 @@
                               <table class="spacer">
                                 <tbody>
                                   <tr>
-                                    <td height="23px" style="font-size:23px;line-height:23px;">&#xA0;</td>
+                                    <td height="42px" style="font-size:42px;line-height:42px;">&#xA0;</td>
                                   </tr>
                                 </tbody>
                               </table>
@@ -115,71 +201,7 @@
                       </th>
                     </tr>
                   </tbody>
-                </table> <!-- 23px spacer -->
-
-                <table class="row header">
-                  <tbody>
-                    <tr>
-                      <th class="small-12 large-12 first last columns content">
-                        Hi all, here’s the latest info. Recruiting efforts paid off! Retention is down though, we’ll fix it. Let me know if you want to discuss before we meet next week.
-                      </th>
-                    </tr>
-                  </tbody>
-                </table> <!-- Message -->
-
-                <table class="row header">
-                  <tbody>
-                    <tr>
-                      <th class="small-12 large-12 columns first last">
-                        <table>
-                          <tr>
-                            <th>
-                              <table class="spacer">
-                                <tbody>
-                                  <tr>
-                                    <td height="16px" style="font-size:16px;line-height:16px;">&#xA0;</td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            <th class="expander"></th>
-                          </tr>
-                        </table>
-                      </th>
-                    </tr>
-                  </tbody>
-                </table> <!-- 16px spacer -->
-
-                <table class="row header">
-                  <tbody>
-                    <tr>
-                      <th class="small-12 large-12 first last columns">
-                        <p class="text-center content">— Joel / February 3, 2016</h4>
-                      </th>
-                    </tr>
-                  </tbody>
-                </table> <!-- Attribution -->
-
-                <table class="row header">
-                  <tbody>
-                    <tr>
-                      <th class="small-12 large-12 columns first last">
-                        <table>
-                          <tr>
-                            <th>
-                              <table class="spacer">
-                                <tbody>
-                                  <tr>
-                                    <td height="49px" style="font-size:49px;line-height:49px;">&#xA0;</td>
-                                  </tr>
-                                </tbody>
-                              </table>
-                            <th class="expander"></th>
-                          </tr>
-                        </table>
-                      </th>
-                    </tr>
-                  </tbody>
-                </table> <!-- 49px spacer -->
+                </table> <!-- 42px spacer -->
 
                 <table class="row topic">
                   <tbody>
