Style note section more like plan GMail text email.

--- a/resources/index.html
+++ b/resources/index.html
@@ -48,7 +48,7 @@
           <table class="row note">
             <tbody>
               <tr>
-                <th class="small-12 large-12 first last columns content">
+                <th class="small-12 large-12 first last columns">
                   Hi all, here’s the latest info. Recruiting efforts paid off! Retention is down though, we’ll fix it. Let me know if you want to discuss before we meet next week.
                 </th>
               </tr>
@@ -81,7 +81,7 @@
             <tbody>
               <tr>
                 <th class="small-12 large-12 first last columns">
-                  <p class="content">— Joel Gascoigne</h4>
+                  <p>— Joel Gascoigne</p>
                 </th>
               </tr>
             </tbody>
