--- a/resources/body.html
+++ b/resources/body.html
@@ -1,1 +1,1 @@
-<body><table class="body" data-made-with-foundation><tr><td class="center" align="center" valign="top"><center><table class="container"><tr><td>
+<body><table class="body"><tr><td class="center" align="center" valign="top"><table class="container"><tr><td>
