Adjust body font to 16px and all other fonts to be larger proportionately. Initial fix for company logo/name centering. Still not right on long names.

--- a/resources/body.html
+++ b/resources/body.html
@@ -1,1 +1,1 @@
-<body><table class="body"><tr><td class="center" align="center" valign="top"><table class="container"><tr><td>
+<body><table class="body"><tr><td class="center" align="center" valign="top"><table class="container" align="center"><tr><td>
