--- a/resources/index.html
+++ b/resources/index.html
@@ -112,7 +112,7 @@
           </tbody>
         </table> <!-- 57px spacer -->
 
-        <table class="container">
+        <table class="container" align="center">
           <tr>
             <td>
 
