Center company image and name separately. HTML cleanup.

--- a/resources/attribution.html
+++ b/resources/attribution.html
@@ -1,1 +1,9 @@
-<table class="row note"><tbody><tr><th class="small-12 large-12 first last columns"><p class="content">— Joel Gascoigne</h4></th></tr></tbody></table>
+<table class="row note">
+  <tbody>
+    <tr>
+      <th class="small-12 large-12 first last columns">
+        <p>— Joel Gascoigne</p>
+      </th>
+    </tr>
+  </tbody>
+</table>
