--- a/resources/body.html
+++ b/resources/body.html
@@ -1,1 +1,16 @@
-<body><table class="body"><tr><td class="center" align="center" valign="top"><table class="container" align="center"><tr><td>
+<body>
+  <table class="body">
+    <tr>
+      <td class="float-center" align="center" valign="top">
+        <center>
+          <table class="container">
+            <tr>
+              <td>
+              </td>
+            </tr>
+          </table>
+        </center>
+      </td>
+    </tr>
+  </table>
+</body>
