--- a/resources/spacer.html
+++ b/resources/spacer.html
@@ -1,1 +1,22 @@
-<table class="row header"><tbody><tr><th class="small-12 large-12 columns first last"><table><tr><th><table class="spacer"><tbody><tr><td height="52px" style="font-size:52px;line-height:52px;">&#xA0;</td></tr></tbody></table></th><th class="expander"></th></tr></table></th></tr></tbody></table>
+<table class="row">
+  <tbody>
+    <tr>
+      <th class="small-12 large-12 first last columns">
+        <table>
+          <tr>
+            <th>
+              <table class="spacer">
+                <tbody>
+                  <tr>
+                    <td height="55px" style="font-size:55px;line-height:55px;">&#xA0;</td>
+                  </tr>
+                </tbody>
+              </table>
+            </th>
+            <th class="expander"></th>
+          </tr>
+        </table>
+      </th>
+    </tr>
+  </tbody>
+</table>
