--- a/resources/company-name.html
+++ b/resources/company-name.html
@@ -2,7 +2,7 @@
   <tbody>
     <tr>
       <th class="small-12 large-12 first last columns">
-        <p class="text-center title">February 2016 Update</p>
+        <p class="text-center company-name">Buffer</p>
       </th>
     </tr>
   </tbody>
