--- a/resources/head.html
+++ b/resources/head.html
@@ -1,1 +1,15 @@
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>Buffer Update</title><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><meta name="viewport" content="width=device-width"/><link rel="stylesheet" href="css/foundation.css"/><link rel="stylesheet" href="css/opencompany.css"/><link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'/><link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/></head></html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+  <!-- The character set should be utf-8 -->
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <!-- Enables media queries -->
+  <meta name="viewport" content="width=device-width"/>
+  <title></title>
+  <!-- Link to the email's CSS, which will be inlined into the email -->
+  <link rel="stylesheet" href="css/foundation.css"/>
+  <link rel="stylesheet" href="css/opencompany.css"/>
+  <!-- Link to web fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Domine' rel='stylesheet' type='text/css'/>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
+</head>
+</html>
