--- a/resources/note.html
+++ b/resources/note.html
@@ -1,1 +1,9 @@
-<table class="row note"><tbody><tr><th class="small-12 large-12 first last columns content">Hi all, here’s the latest info. Recruiting efforts paid off! Retention is down though, we’ll fix it. Let me know if you want to discuss before we meet next week.</th></tr></tbody></table>
+<table class="row note">
+  <tbody>
+    <tr>
+      <th class="small-12 large-12 first last columns">
+        Hi all, here’s the latest info. Recruiting efforts paid off! Retention is down though, we’ll fix it. Let me know if you want to discuss before we meet next week.
+      </th>
+    </tr>
+  </tbody>
+</table> 
