Add email footer.

--- a/resources/index.html
+++ b/resources/index.html
@@ -22,7 +22,7 @@
         <!-- The class, align, and <center> tag center the container -->
         <td class="float-center" align="center" valign="top">
 
-          <table class="message">
+          <table class="note">
             <tbody>
               <tr>
                 <td>
@@ -787,8 +787,131 @@
                 </td>
               </tr>
             </table> <!-- container -->
-          
           </center>
+
+          <table class="footer">
+            <tbody>
+              <tr>
+                <td>
+                  <center>
+                    <table class="container">
+                      <tr>
+                        <td>
+
+                          <table class="row footer">
+                            <tbody>
+                              <tr>
+                                <th class="small-12 large-12 first last columns">
+                                  <table>
+                                    <tr>
+                                      <th>
+                                        <table class="spacer">
+                                          <tbody>
+                                            <tr>
+                                              <td height="51" style="font-size:51px;line-height:15px;">&#xA0;</td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
+                                      </th>
+                                      <th class="expander"></th>
+                                    </tr>
+                                  </table>
+                                </th>
+                              </tr>
+                            </tbody>
+                          </table> <!-- 51px spacer -->
+
+                          <table class="row footer">
+                            <tbody>
+                              <tr>
+                                <th class="small-2 large-2 first columns"></th>
+                                <th class="small-8 large-8 columns">
+                                  <p class="text-center">
+                                    Powered by <a href="http://opencompany.com/">OpenCompany</a>, a simple way to share the big picture.
+                                  </p>
+                                </th>
+                                <th class="small-2 large-2 last columns"></th>
+                              </tr>
+                            </tbody>
+                          </table> <!-- Powered by -->
+
+                          <table class="row footer">
+                            <tbody>
+                              <tr>
+                                <th class="small-12 large-12 columns first last">
+                                  <table>
+                                    <tr>
+                                      <th>
+                                        <table class="spacer">
+                                          <tbody>
+                                            <tr>
+                                              <td height="24" style="font-size:24px;line-height:24px;">&#xA0;</td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
+                                      </th>
+                                      <th class="expander"></th>
+                                    </tr>
+                                  </table>
+                                </th>
+                              </tr>
+                            </tbody>
+                          </table> <!-- 24px spacer -->
+
+                          <table class="row footer">
+                            <tbody>
+                              <tr>
+                                <th class="small-2 large-2 first columns"></th>
+                                <th class="small-8 large-8 columns">
+                                    <table class="button expanded learn">
+                                      <tr>
+                                        <td>
+                                          <table>
+                                            <tr>
+                                              <td><a href="https://opencompany.com/">LEARN MORE ➞</a></td>
+                                            </tr>
+                                          </table>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                </th>
+                                <th class="small-2 large-2 last columns"></th>
+                              </tr>
+                            </tbody>
+                          </table> <!-- Learn more -->
+
+                          <table class="row footer">
+                            <tbody>
+                              <tr>
+                                <th class="small-12 large-12 columns first last">
+                                  <table>
+                                    <tr>
+                                      <th>
+                                        <table class="spacer">
+                                          <tbody>
+                                            <tr>
+                                              <td height="22" style="font-size:22px;line-height:22px;">&#xA0;</td>
+                                            </tr>
+                                          </tbody>
+                                        </table>
+                                      </th>
+                                      <th class="expander"></th>
+                                    </tr>
+                                  </table>
+                                </th>
+                              </tr>
+                            </tbody>
+                          </table> <!-- 22px spacer -->
+
+                        </td>
+                      </tr>
+                    </table> <!-- container -->
+                  </center>
+                </td>
+              </tr>
+            </tbody>
+          </table> <!-- footer -->
+
         </td>
       </tr>
     </table> <!-- body -->
