Work on footer styling.

--- a/resources/index.html
+++ b/resources/index.html
@@ -824,13 +824,13 @@
                           <table class="row footer">
                             <tbody>
                               <tr>
-                                <th class="small-2 large-2 first columns"></th>
-                                <th class="small-8 large-8 columns">
+                                <th class="small-1 large-2 first columns"></th>
+                                <th class="small-11 large-8 columns">
                                   <p class="text-center">
                                     Powered by <a href="http://opencompany.com/">OpenCompany</a>, a simple way to share the big picture.
                                   </p>
                                 </th>
-                                <th class="small-2 large-2 last columns"></th>
+                                <th class="small-1 large-2 last columns"></th>
                               </tr>
                             </tbody>
                           </table> <!-- Powered by -->
@@ -861,21 +861,29 @@
                           <table class="row footer">
                             <tbody>
                               <tr>
-                                <th class="small-2 large-2 first columns"></th>
-                                <th class="small-8 large-8 columns">
-                                    <table class="button expanded learn">
-                                      <tr>
-                                        <td>
-                                          <table>
+                                <th class="small-1 large-2 first columns"></th>
+                                <th class="small-11 large-8 columns">
+                                  <table>
+                                    <tr>
+                                      <th>
+                                        <center data-parsed="">
+                                          <table class="button float-center expanded learn">
                                             <tr>
-                                              <td><a href="https://opencompany.com/">LEARN MORE ➞</a></td>
+                                              <td>
+                                                <table>
+                                                  <tr>
+                                                    <td><a href="https://opencompany.com/">LEARN MORE ➞</a></td>
+                                                  </tr>
+                                                </table>
+                                              </td>
                                             </tr>
                                           </table>
-                                        </td>
-                                      </tr>
-                                    </table>
+                                        </center>
+                                      </th>
+                                    </tr>
+                                  </table>
                                 </th>
-                                <th class="small-2 large-2 last columns"></th>
+                                <th class="small-1 large-2 last columns"></th>
                               </tr>
                             </tbody>
                           </table> <!-- Learn more -->
