Simplify footer for now.

--- a/resources/index.html
+++ b/resources/index.html
@@ -698,7 +698,7 @@
                             <th class="small-1 large-2 first columns"></th>
                             <th class="small-11 large-8 columns">
                               <p class="text-center">
-                                Powered by <a href="http://opencompany.com/">OpenCompany</a>, a simple way to share the big picture.
+                                Powered by <a href="http://opencompany.com/">OpenCompany</a>
                               </p>
                             </th>
                             <th class="small-1 large-2 last columns"></th>
@@ -713,7 +713,7 @@
                                   <th>
                                     <table class="spacer">
                                       <tr>
-                                        <td height="24" style="font-size:24px;line-height:24px;">&#xA0;</td>
+                                        <td height="28" style="font-size:28px;line-height:28px;">&#xA0;</td>
                                       </tr>
                                     </table>
                                   </th>
@@ -722,54 +722,7 @@
                               </table>
                             </th>
                           </tr>
-                        </table> <!-- 24px spacer -->
-
-                        <table class="row footer">
-                          <tr>
-                            <th class="small-1 large-2 first columns"></th>
-                            <th class="small-11 large-8 columns">
-                              <table>
-                                <tr>
-                                  <th>
-                                    <center data-parsed="">
-                                      <table class="button float-center expanded learn">
-                                        <tr>
-                                          <td>
-                                            <table>
-                                              <tr>
-                                                <td><a href="https://opencompany.com/">LEARN MORE ➞</a></td>
-                                              </tr>
-                                            </table>
-                                          </td>
-                                        </tr>
-                                      </table>
-                                    </center>
-                                  </th>
-                                </tr>
-                              </table>
-                            </th>
-                            <th class="small-1 large-2 last columns"></th>
-                          </tr>
-                        </table> <!-- Learn more -->
-
-                        <table class="row footer">
-                          <tr>
-                            <th class="small-12 large-12 columns first last">
-                              <table>
-                                <tr>
-                                  <th>
-                                    <table class="spacer">
-                                      <tr>
-                                        <td height="22" style="font-size:22px;line-height:22px;">&#xA0;</td>
-                                      </tr>
-                                    </table>
-                                  </th>
-                                  <th class="expander"></th>
-                                </tr>
-                              </table>
-                            </th>
-                          </tr>
-                        </table> <!-- 22px spacer -->
+                        </table> <!-- 28px spacer -->
 
                       </td>
                     </tr>
