Some cleanup to the CSS.

--- a/resources/data-topic.html
+++ b/resources/data-topic.html
@@ -11,7 +11,7 @@
       <table class="finance-metrics">
         <tr>
           <td>
-            <p class="metric">$2,546,589</p>
+            <p class="metric">$2.54M</p>
             <p class="label">CASH - OCT 2016</p>
             <p class="metric">$650K</p>
             <p class="label">REVENUE - OCT 2016</p>
