--- a/resources/index.html
+++ b/resources/index.html
@@ -1,5 +1,4 @@
-<!-- Emails use the XHTML Strict doctype -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <!-- The character set should be utf-8 -->
@@ -562,7 +561,7 @@
                           <table class="finance-metrics">
                             <tr>
                               <td>
-                                <p class="metric">$2,546,589</p>
+                                <p class="metric">$2.54M</p>
                                 <p class="label">CASH - OCT 2016</p>
                                 <p class="metric">$650K</p>
                                 <p class="label">REVENUE - OCT 2016</p>
